Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,3 +30,5 @@ steps:
     configuration: '$(buildConfiguration)'
 
 - task: WhiteSource@21
+inputs:
+    cwd: '$(System.DefaultWorkingDirectory)'
